# e2a

./: CMakeLists.txt  Fiducial.cpp  README.md  Run_dependent.cpp  fiducial.cpp  skim.cxx  skim_tree.cpp
Adin_analysis/: CMakeLists.txt  count.cpp  fiducial.cpp  fiducial_analysis.cpp  fiducial_histmaker.cpp
Axel_analysis/: CMakeLists.txt  example_analysis.cpp
auxiliary_scripts/: CMakeLists.txt  sim_pid_electron.cpp
auxiliary_scripts/pid_sim_electron/: CMakeLists.txt  sim_pid_electron.cpp
auxiliary_scripts/pid_sim_proton/: CMakeLists.txt  sim_pid_proton.cpp
calibration_data/: CMakeLists.txt  el_Epratio_mom4461.root
cut_library/: CMakeLists.txt  Fiducial.cpp  Run_dependent.cpp  fiducial_test.cpp
fiducial/: CMakeLists.txt  count.cpp
include/: Fiducial.h  Run_dependent.h  constants.h  e2a_constants.h  fiducial.h
include/ClasTool/html/: ._Index.html
include/ClasTool/include/: TTBIDClass.h  TTBTRClass.h
maps/: CMakeLists.txt  e2a_maps.cpp
maps/completed/: e2a_solid_2261_2250_e.root
maps/creation/: CMakeLists.txt  compress_data_uniform.pl  convert_uniform.cxx  create_jsub.pl  e2_pass2.tcl  ffread.4He  ffread.C12  generator.cxx  generator_electrons.cxx  generator_non_electrons.cxx  mapmaker.cpp  sim.csh
maps/diagnostics/: CMakeLists.txt  basic_test.cpp
write_tree/: CMakeLists.txt  FindROOT.cmake  write_tree_e2a.cxx
